<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityRefine"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:gravity="center_vertical"
        android:background="@color/refine_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/refine_head"
            android:textSize="22sp"
            android:layout_marginStart="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="22dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_availability"
            android:textSize="19sp"
            android:textColor="@color/refine_bg"
            android:textStyle="bold"/>

        <Spinner
            android:layout_marginTop="8dp"
            android:id="@+id/spinner"
            android:paddingHorizontal="8dp"
            android:paddingVertical="14dp"
            android:background="@drawable/border_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_status"
            android:textSize="19sp"
            android:textColor="@color/refine_bg"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edt_status"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textColorHint="@color/refine_bg"
            android:textColor="@color/refine_bg"
            android:hint="@string/hi_community_i_am_open_to_new_connections"
            android:background="@drawable/border_bg"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_47_250"
            android:textColor="@color/refine_bg"
            android:gravity="end"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/refine_bg"
            android:text="@string/select_hyper_local_distance"
            android:textStyle="bold"
            android:textSize="19sp"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumbTint="@color/refine_bg"
            android:layout_marginTop="20dp"
            android:progressTint="@color/refine_bg"
            android:max="100"
            android:progress="50"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="@color/refine_bg"
                android:text="@string/_1_km" />

            <TextView
                android:id="@+id/textMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/refine_bg"
                android:text="@string/_100_km" />

        </RelativeLayout>

        <TextView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_purpose"
            android:textColor="@color/refine_bg"
            android:textSize="19sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="18dp"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:progressTint="@color/white"
                android:layout_centerInParent="true"
                android:id="@+id/progress_circular"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"/>

            <Button
                android:layout_centerInParent="true"
                android:id="@+id/btn_save"
                android:textStyle="bold"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:backgroundTint="@color/refine_bg"
                android:text="@string/save_explore"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>